made Components: primary btn, icon btn

--- a/frontend/src/app/pages/orders/orders.page.html
+++ b/frontend/src/app/pages/orders/orders.page.html
@@ -1,9 +1,10 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>orders</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
-<ion-content>
-
+<ion-content color="primary">
+  <!-- <app-primary-button></app-primary-button> -->
+  <!-- <app-icon-button></app-icon-button> -->
 </ion-content>
