arranged left sidebar

--- a/frontend/src/app/shared/components/icon-button/icon-button.component.html
+++ b/frontend/src/app/shared/components/icon-button/icon-button.component.html
@@ -2,7 +2,8 @@
   <button class="raised">
     <img src="{{ icon }}" alt="" />
   </button>
-  <button class="pressed">
+
+  <!-- <button class="pressed">
     <img src="{{ icon }}" alt="" />
-  </button>
+  </button> -->
 </div>
