--- a/frontend/src/app/pages/orders/orders.page.html
+++ b/frontend/src/app/pages/orders/orders.page.html
@@ -5,6 +5,8 @@
 </ion-header> -->
 
 <ion-content color="primary">
-  <!-- <app-primary-button></app-primary-button> -->
   <!-- <app-icon-button></app-icon-button> -->
+  <app-sidebar-left></app-sidebar-left>
+
+  <!-- <app-primary-button></app-primary-button> -->
 </ion-content>
