--- a/frontend/src/app/shared/components/sidebar-left/sidebar-left.component.html
+++ b/frontend/src/app/shared/components/sidebar-left/sidebar-left.component.html
@@ -1,3 +1,12 @@
-<p>
-  sidebar-left works!
-</p>
+<div class="sidebar-left" *ngIf="pages">
+  <div class="logo">
+    <img src="../../../../assets/logo/logo_BH.png" alt="" />
+  </div>
+
+  <!-- middle buttons -->
+  <div class="action-btns">
+    <div *ngFor="let page of pages">
+      <app-icon-button [icon]="page.icon"></app-icon-button>
+    </div>
+  </div>
+</div>
