created right sidebar

--- a/frontend/src/app/pages/orders/orders.page.html
+++ b/frontend/src/app/pages/orders/orders.page.html
@@ -7,6 +7,8 @@
 <ion-content color="primary">
   <!-- <app-icon-button></app-icon-button> -->
   <app-sidebar-left></app-sidebar-left>
-
+  <!-- <app-line></app-line> -->
+  <app-sidebar-right></app-sidebar-right>
+  <app-profile-outline></app-profile-outline>
   <!-- <app-primary-button></app-primary-button> -->
 </ion-content>
