--- a/frontend/src/app/shared/components/profile-outline/profile-outline.component.html
+++ b/frontend/src/app/shared/components/profile-outline/profile-outline.component.html
@@ -1,3 +1,5 @@
-<p>
-  profile-outline works!
-</p>
+<div class="profile-outline">
+  <div class="profile-image">
+    <img src="../../../../assets/profile.png" alt="" />
+  </div>
+</div>
