--- a/frontend/src/app/shared/components/icon-button/icon-button.component.html
+++ b/frontend/src/app/shared/components/icon-button/icon-button.component.html
@@ -1,4 +1,5 @@
 <div>
+  <!-- class can be passed: raised/passed/primary    -->
   <button class="raised">
     <img src="{{ icon }}" alt="" />
   </button>
