--- a/frontend/src/app/shared/layouts/sidebar-left/sidebar-left.component.scss
+++ b/frontend/src/app/shared/layouts/sidebar-left/sidebar-left.component.scss
@@ -1,8 +1,9 @@
 .sidebar-left {
-  position: inherit;
+  position: fixed;
   width: 110px;
   left: 0px;
   top: 0px;
+  bottom: 0px;
 
   background: #fbf2e0;
   box-shadow: 2px 4px 48px rgba(0, 0, 0, 0.04);
