--- a/frontend/src/app/pages/orders/orders.page.html
+++ b/frontend/src/app/pages/orders/orders.page.html
@@ -10,5 +10,7 @@
   <!-- <app-line></app-line> -->
   <app-sidebar-right></app-sidebar-right>
   <app-profile-outline></app-profile-outline>
+
+  <!-- <app-input-row></app-input-row> -->
   <!-- <app-primary-button></app-primary-button> -->
 </ion-content>
