--- a/frontend/src/app/shared/components/line/line.component.scss
+++ b/frontend/src/app/shared/components/line/line.component.scss
@@ -1,11 +1,8 @@
 .divider {
-  position: absolute;
-  width: 100%;
+  width: inherit;
   height: 4px;
-  //   left: 1102px;
-  // top: 289px;
 
-  // background: #fbf2e0;
+  background: #fbf2e0;
   box-shadow: inset 0px -2px 2px rgba(251, 251, 251, 0.8),
     inset 0px 1.5px 2px rgba(0, 0, 0, 0.18);
   border-radius: 50px;
