closed Signup page

--- a/frontend/src/app/pages/signup/signup.page.html
+++ b/frontend/src/app/pages/signup/signup.page.html
@@ -4,14 +4,14 @@
     <div class="head--lines first">
       <app-line></app-line>
     </div>
-    <img src="../../../assets/logo/logo_full.png" alt="" />
+    <img src="../../../assets/logo/logo_BH_full.png" alt="" />
     <div class="head--lines second">
       <app-line></app-line>
     </div>
   </div>
 
   <!-- toggle -->
-  <div class="body">
+  <div class="toggle">
     <div>
       <app-button [buttonName]="loginBtnName" [btnType]="loginBtn"></app-button>
     </div>
@@ -27,27 +27,34 @@
     <div>
       <form>
         <!-- [formGroup]="userForm" -->
-
-        <div>
+        <div class="form-fields">
           <p>NAME</p>
-          <ion-input type="text" required></ion-input>
+          <ion-input type="text" placeholder="John Doe" required></ion-input>
           <!-- formControlName="email" -->
         </div>
 
-        <div>
+        <div class="form-fields">
           <p>EMAIL ID</p>
-          <ion-input type="email" required></ion-input>
+          <ion-input
+            type="email"
+            placeholder="johndoe123@gmail.com"
+            required
+          ></ion-input>
           <!-- formControlName="email" -->
         </div>
 
-        <div>
+        <div class="form-fields">
           <p>PASSWORD</p>
-          <ion-input type="password" required></ion-input>
+          <ion-input type="password" placeholder="John@123" required>
+          </ion-input>
+
           <!-- formControlName="password" -->
         </div>
 
-        <app-button [buttonName]="SIGNUP" [btnType]="primaryBtn"></app-button>
-        <!-- [disabled]="!userForm.valid" (click)="loginForm()"-->
+        <div class="btn-primary">
+          <app-button [buttonName]="SIGNUP" [btnType]="primaryBtn"></app-button>
+          <!-- [disabled]="!userForm.valid" (click)="loginForm()"-->
+        </div>
       </form>
     </div>
   </div>
