--- a/frontend/src/app/pages/signup/signup.page.html
+++ b/frontend/src/app/pages/signup/signup.page.html
@@ -13,7 +13,11 @@
   <!-- toggle -->
   <div class="toggle">
     <div>
-      <app-button [buttonName]="loginBtnName" [btnType]="loginBtn"></app-button>
+      <app-button
+        [routerLink]="['/login']"
+        [buttonName]="loginBtnName"
+        [btnType]="loginBtn"
+      ></app-button>
     </div>
     <div>
       <app-button
