dashboard: changes in progress

--- a/frontend/src/app/pages/orders/orders.page.html
+++ b/frontend/src/app/pages/orders/orders.page.html
@@ -5,7 +5,9 @@
 </ion-header> -->
 
 <ion-content color="primary">
-  <app-sidebar-left></app-sidebar-left>
+  <div>
+    <app-sidebar-left></app-sidebar-left>
+  </div>
 
   <div class="body">
     <h2>ACTIVE ORDERS</h2>
@@ -55,6 +57,8 @@
     </mat-accordion>
   </div>
 
-  <app-sidebar-right></app-sidebar-right>
-  <app-profile-outline></app-profile-outline>
+  <div>
+    <app-sidebar-right></app-sidebar-right>
+    <app-profile-outline></app-profile-outline>
+  </div>
 </ion-content>
