--- a/frontend/src/app/pages/orders/orders.page.html
+++ b/frontend/src/app/pages/orders/orders.page.html
@@ -15,15 +15,15 @@
     <mat-accordion displayMode="flat" multi class="mat-table">
       <!-- Actual header -->
       <section>
-        <span class="mat-header-cell" mat-sort-header="vesselName"
-          >PROJECT NAME</span
-        >
-        <span class="mat-header-cell" mat-sort-header="vesselId"
-          >DELIVERY DATE</span
-        >
-        <span class="mat-header-cell" mat-sort-header="vesselStatus"
-          >EARNING</span
-        >
+        <span class="mat-header-cell" mat-sort-header="vesselName">
+          PROJECT NAME
+        </span>
+        <span class="mat-header-cell" mat-sort-header="vesselId">
+          DELIVERY DATE
+        </span>
+        <span class="mat-header-cell" mat-sort-header="vesselStatus">
+          EARNING
+        </span>
         <span class="mat-header-cell" mat-sort-header="ircs">EXPENSE</span>
         <span class="mat-header-cell" mat-sort-header="ircs">STATUS</span>
       </section>
@@ -31,19 +31,18 @@
       <div class="scroll-box">
         <mat-expansion-panel *ngFor="let item of displayedRows">
           <!-- expanded header -->
-          <section>
-            <span class="mat-header-cell" mat-sort-header="vesselName"
-              >PROJECT NAME</span
-            >
+          <!-- <section>
+            <span class="mat-header-cell" mat-sort-header="vesselName">
+              STAFF NAME
+            </span>
             <span class="mat-header-cell" mat-sort-header="vesselId"
-              >DELIVERY DATE</span
+              >AMOUNT</span
             >
-            <span class="mat-header-cell" mat-sort-header="vesselStatus"
-              >EARNING</span
-            >
-            <span class="mat-header-cell" mat-sort-header="ircs">EXPENSE</span>
-            <span class="mat-header-cell" mat-sort-header="ircs">STATUS</span>
-          </section>
+            <span class="mat-header-cell" mat-sort-header="vesselStatus">
+              PAID ON
+            </span>
+            <span class="mat-header-cell" mat-sort-header="ircs"></span>
+          </section> -->
 
           <mat-expansion-panel-header class="mat-row">
             <span class="mat-cell">{{item.vesselName }}</span>
@@ -51,7 +50,45 @@
             <span class="mat-cell">{{item.vesselStatus}}</span>
             <span class="mat-cell">{{item.ircs}}</span>
           </mat-expansion-panel-header>
-          <div><pre>{{item | json}}</pre></div>
+
+          <!-- <div class="shadow"> -->
+          <table mat-table [dataSource]="dataSource">
+            <!--- Note that these columns can be defined in any order.
+                    The actual rendered columns are set as a property on the row definition" -->
+
+            <!-- Position Column -->
+            <ng-container matColumnDef="position">
+              <th mat-header-cell *matHeaderCellDef>No.</th>
+              <td mat-cell *matCellDef="let element">{{element.position}}</td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef>Name</th>
+              <td mat-cell *matCellDef="let element">{{element.name}}</td>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="weight">
+              <th mat-header-cell *matHeaderCellDef>Weight</th>
+              <td mat-cell *matCellDef="let element">{{element.weight}}</td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="symbol">
+              <th mat-header-cell *matHeaderCellDef>Symbol</th>
+              <td mat-cell *matCellDef="let element">{{element.symbol}}</td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr
+              mat-row
+              *matRowDef="let row; columns: displayedColumns;"
+              [class.make-gold]="true"
+            ></tr>
+          </table>
+
+          <!-- </div> -->
         </mat-expansion-panel>
       </div>
     </mat-accordion>
@@ -59,6 +96,5 @@
 
   <div>
     <app-sidebar-right></app-sidebar-right>
-    <app-profile-outline></app-profile-outline>
   </div>
 </ion-content>
