--- a/frontend/src/app/pages/orders/orders.page.scss
+++ b/frontend/src/app/pages/orders/orders.page.scss
@@ -1,20 +1,64 @@
 .body {
-  margin: 22px 180px;
+  float: left;
+  margin: 20px 0 0 32px;
   h2 {
     color: saddlebrown;
   }
 
   .scroll-box {
     overflow-y: scroll;
+    height: 80vh;
+    padding-top: 10px;
   }
+
   .mat-accordion section {
     border-radius: 10px;
-    margin: 22px 0;
+    margin: 22px 0 0 0;
   }
 
   .mat-accordion .mat-expansion-panel {
-    border-radius: 20px;
-    margin: 22px 0;
-    width: 800px;
+    margin: 0 2.5rem 1rem 0.5rem;
+    width: 58vw;
+
+    background: linear-gradient(90deg, #fff2d9 -1.28%, #fff9e4 103.08%);
+    box-shadow: -4px -6px 6px rgba(255, 255, 255, 0.6),
+      1px 1px 8px rgba(0, 0, 0, 0.08);
+    border-radius: 10px;
   }
+
+  section span {
+    color: #c7a277;
+    padding-right: 56px;
+    padding-left: 32px;
+
+    font-family: Poppins;
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 1px;
+  }
+}
+
+.scroll-box::-webkit-scrollbar {
+  width: 5px;
+}
+
+.scroll-box::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  height: 60px;
+  background-color: #8a4b00;
+}
+
+td.mat-cell,
+th.mat-header-cell {
+  border-bottom-style: none;
+}
+
+table.mat-table {
+  width: 100%;
+  background: linear-gradient(90deg, #fff2d9 -1.28%, #fff9e4 103.08%);
+}
+
+.shadow {
+  box-shadow: inset 0 2px 1px -1px rgba(0, 0, 0, 1),
+    inset 0 1px 1px 0 rgba(0, 0, 0, 1), inset 0 1px 3px 0 rgba(0, 0, 0, 1);
 }
