regularised pages, deleted material

--- a/frontend/src/app/pages/add-new-order/add-new-order.page.html
+++ b/frontend/src/app/pages/add-new-order/add-new-order.page.html
@@ -1,9 +1,16 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>add-new-order</ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content>
+<ion-content color="primary">
+  <div>
+    <app-sidebar-left></app-sidebar-left>
+  </div>
 
+  <div class="body">
+    <h2>ADD NEW ORDER</h2>
+
+    
+  </div>
+
+  <div>
+    <app-sidebar-right></app-sidebar-right>
+  </div>
 </ion-content>
