--- a/frontend/src/app/pages/staff/staff.page.html
+++ b/frontend/src/app/pages/staff/staff.page.html
@@ -1,54 +1,15 @@
 <ion-content color="primary">
-  <div class="main">
-    <table mat-table [dataSource]="dataSource" multiTemplateDataRows>
-      <ng-container
-        matColumnDef="{{column}}"
-        *ngFor="let column of columnsToDisplay"
-      >
-        <th mat-header-cell *matHeaderCellDef>{{column}}</th>
-        <td mat-cell *matCellDef="let element">{{element[column]}}</td>
-      </ng-container>
+  <div>
+    <app-sidebar-left></app-sidebar-left>
+  </div>
 
-      <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-      <ng-container matColumnDef="expandedDetail">
-        <td
-          mat-cell
-          *matCellDef="let element"
-          [attr.colspan]="columnsToDisplay.length"
-        >
-          <div
-            class="example-element-detail"
-            [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'"
-          >
-            <div class="example-element-diagram">
-              <div class="example-element-position">{{element.position}}</div>
-              <div class="example-element-symbol">{{element.symbol}}</div>
-              <div class="example-element-name">{{element.name}}</div>
-              <div class="example-element-weight">{{element.weight}}</div>
-            </div>
-            <div class="example-element-description">
-              {{element.description}}
-              <span class="example-element-description-attribution">
-                -- Wikipedia
-              </span>
-            </div>
-          </div>
-        </td>
-      </ng-container>
+  <div class="body">
+    <h2>STAFF MEMBERS</h2>
 
-      <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-      <tr
-        mat-row
-        *matRowDef="let element; columns: columnsToDisplay;"
-        class="example-element-row"
-        [class.example-expanded-row]="expandedElement === element"
-        (click)="expandedElement = element"
-      ></tr>
-      <tr
-        mat-row
-        *matRowDef="let row; columns: ['expandedDetail']"
-        class="example-detail-row"
-      ></tr>
-    </table>
+    
+  </div>
+
+  <div>
+    <app-sidebar-right></app-sidebar-right>
   </div>
 </ion-content>
