--- a/frontend/src/app/shared/layouts/sidebar-left/sidebar-left.component.html
+++ b/frontend/src/app/shared/layouts/sidebar-left/sidebar-left.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar-left" *ngIf="pages">
+<div class="sidebar-left" >
   <div class="logo">
     <img src="../../../../assets/logo/logo_BH.png" alt="" />
   </div>
