--- a/frontend/src/app/shared/components/icon-button/icon-button.component.html
+++ b/frontend/src/app/shared/components/icon-button/icon-button.component.html
@@ -1,6 +1,4 @@
-<div>
-  <!-- class can be passed: raised/passed/primary    -->
-  <button class="raised">
+  <!-- class: raised/passed/primary    -->
+  <button class={{class}}>
     <img src="{{ icon }}" alt="" />
   </button>
-</div>
