--- a/frontend/src/app/pages/orders/orders.page.html
+++ b/frontend/src/app/pages/orders/orders.page.html
@@ -1,6 +1,6 @@
 <ion-content color="primary">
   <div>
-    <app-sidebar-left></app-sidebar-left>
+    <app-sidebar-left [pageName]="pageName"></app-sidebar-left>
   </div>
 
   <div class="body">
