closing right Sidebar

--- a/frontend/src/app/shared/components/profile-outline/profile-outline.component.html
+++ b/frontend/src/app/shared/components/profile-outline/profile-outline.component.html
@@ -1,5 +1,3 @@
 <div class="profile-outline">
-  <div class="profile-image">
-    <img src="../../../../assets/profile.png" alt="" />
-  </div>
+    <img src="../../../../assets/icon/female_profile.png" alt="" />
 </div>
