--- a/frontend/src/app/shared/layouts/sidebar-right/sidebar-right.component.html
+++ b/frontend/src/app/shared/layouts/sidebar-right/sidebar-right.component.html
@@ -1,3 +1,41 @@
 <div class="sidebar-right">
   <app-profile-outline></app-profile-outline>
+  <!-- <div>
+    <p>Hey, <span>John</span>!</p>
+  </div> -->
+
+  <div class="key-params">
+    <div class="key-param">
+      <p class="key">ORDERS</p>
+      <p class="value">30</p>
+    </div>
+    <div class="key-param">
+      <p class="key">PAID</p>
+      <p class="value">30</p>
+    </div>
+    <div class="key-param">
+      <p class="key">CLEARED</p>
+      <p class="value">30</p>
+    </div>
+    <div class="key-param">
+      <p class="key">CLEARANCE</p>
+      <p class="value">30</p>
+    </div>
+    <div class="key-param">
+      <p class="key">EARNED</p>
+      <p class="value">30</p>
+    </div>
+    <div class="key-param">
+      <p class="key">USED</p>
+      <p class="value">30</p>
+    </div>
+
+    <div class="activity">
+      <h1>ACTIVITY</h1>
+      <p>$50 paid to John on 12-05-2020</p>
+      <p>$50 paid to John on 12-05-2020</p>
+      <p>$50 paid to John on 12-05-2020</p>
+    </div>
+   
+  </div>
 </div>
