added page-wise names

--- a/frontend/src/app/pages/setting/setting.page.html
+++ b/frontend/src/app/pages/setting/setting.page.html
@@ -39,7 +39,7 @@
 
 <ion-content color="primary">
   <div>
-    <app-sidebar-left></app-sidebar-left>
+    <app-sidebar-left [pageName]="pageName"></app-sidebar-left>
   </div>
 
   <div class="body">
