--- a/frontend/src/app/pages/add-new-order/add-new-order.page.html
+++ b/frontend/src/app/pages/add-new-order/add-new-order.page.html
@@ -1,7 +1,7 @@
 
 <ion-content color="primary">
   <div>
-    <app-sidebar-left></app-sidebar-left>
+    <app-sidebar-left [pageName] = "pageName"></app-sidebar-left>
   </div>
 
   <div class="body">
