--- a/frontend/src/app/shared/layouts/sidebar-left/sidebar-left.component.scss
+++ b/frontend/src/app/shared/layouts/sidebar-left/sidebar-left.component.scss
@@ -12,16 +12,18 @@
 }
 
 .action-btn {
+  margin-top: 10vh;
+
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .action-btn div {
-  padding: 10px;
+  padding: 18px;
 }
 
 .action-btn div:last-child{
-  padding-top: 30vh;
+  padding-top: 15vh;
 }
 
