created accordion component

--- a/frontend/src/app/shared/layouts/sidebar-right/sidebar-right.component.html
+++ b/frontend/src/app/shared/layouts/sidebar-right/sidebar-right.component.html
@@ -11,23 +11,23 @@
     </div>
     <div class="key-param">
       <p class="key">PAID</p>
-      <p class="value">30</p>
+      <p class="value">$300</p>
     </div>
     <div class="key-param">
       <p class="key">CLEARED</p>
-      <p class="value">30</p>
+      <p class="value">$480</p>
     </div>
     <div class="key-param">
       <p class="key">CLEARANCE</p>
-      <p class="value">30</p>
+      <p class="value">$0</p>
     </div>
     <div class="key-param">
       <p class="key">EARNED</p>
-      <p class="value">30</p>
+      <p class="value">$280</p>
     </div>
     <div class="key-param">
       <p class="key">USED</p>
-      <p class="value">30</p>
+      <p class="value">$200</p>
     </div>
 
     <div class="activity">
