--- a/frontend/src/app/pages/orders/orders.page.scss
+++ b/frontend/src/app/pages/orders/orders.page.scss
@@ -1,10 +1,14 @@
 .body {
   float: left;
+  width: 62vw;
   margin: 20px 0 0 32px;
   h2 {
     color: saddlebrown;
   }
 }
+
+
+
 
 //   .scroll-box {
 //     overflow-y: scroll;
