--- a/frontend/src/app/pages/signup/signup.page.html
+++ b/frontend/src/app/pages/signup/signup.page.html
@@ -15,14 +15,14 @@
     <div>
       <app-button
         [routerLink]="['/login']"
-        [buttonName]="loginBtnName"
-        [btnType]="loginBtn"
+        [buttonName]="'LOGIN'"
+        [btnType]="'btn-login btn-raised'"
       ></app-button>
     </div>
     <div>
       <app-button
-        [buttonName]="signupBtnName"
-        [btnType]="signupBtn"
+        [buttonName]="'SIGNUP'"
+        [btnType]="'btn-signup btn-pressed'"
       ></app-button>
     </div>
   </div>
@@ -56,7 +56,9 @@
         </div>
 
         <div class="btn-primary">
-          <app-button [buttonName]="SIGNUP" [btnType]="primaryBtn"></app-button>
+          <app-button
+          [routerLink]="['/login']"
+          [buttonName]="'SIGN UP'" [btnType]="'btn-primary'"></app-button>
           <!-- [disabled]="!userForm.valid" (click)="loginForm()"-->
         </div>
       </form>
