--- a/frontend/src/app/shared/components/accordion/accordion.component.scss
+++ b/frontend/src/app/shared/components/accordion/accordion.component.scss
@@ -1,22 +1,36 @@
 .mypanel {
-    color: #222;
-  }
-  
-  .mypanel .title {
+  color: #222;
+
+  .row {
+    display: grid;
+    grid-auto-flow: column;
+
     width: 100%;
-    padding: 10px;
-    margin: 10px;
+    padding: 4px;
+    margin: 20px 0 0 0;
     cursor: pointer;
 
-    background: linear-gradient(90deg, #FFF2D9 -1.28%, #FFF9E4 103.08%);
-    box-shadow: -5px -7px 8px rgba(255, 255, 255, 0.5), 5px 5px 16px rgba(0, 0, 0, 0.08);
+    background: linear-gradient(90deg, #fff2d9 -1.28%, #fff9e4 103.08%);
+    box-shadow: -4px -4px 8px rgba(255, 255, 255, 0.5),
+      2px 2px 10px rgba(0, 0, 0, 0.08);
     border-radius: 10px;
   }
-  
-  .mypanel .body {
+
+  .row div {
     padding: 10px;
   }
-  
-  .mypanel .body.hidden {
+
+  .body {
+    padding: 27px;
+    margin: 0 40px;
+
+    background: linear-gradient(90deg, #fff2d9 -1.28%, #fff9e4 103.08%);
+    box-shadow: inset -7px -5px 8px rgba(255, 255, 255, 0.5),
+      inset 5px 5px 16px rgba(0, 0, 0, 0.08);
+    border-radius: 0px 0px 10px 10px;
+  }
+
+  .body.hidden {
     display: none;
   }
+}
