--- a/frontend/src/app/shared/components/accordion/accordion.component.scss
+++ b/frontend/src/app/shared/components/accordion/accordion.component.scss
@@ -16,6 +16,10 @@
     border-radius: 10px;
   }
 
+  // .row:first-of-type{
+  //   margin: 0;
+  // }
+
   .row div {
     padding: 10px;
   }
@@ -23,6 +27,7 @@
   .body {
     padding: 27px;
     margin: 0 40px;
+    display: grid;
 
     background: linear-gradient(90deg, #fff2d9 -1.28%, #fff9e4 103.08%);
     box-shadow: inset -7px -5px 8px rgba(255, 255, 255, 0.5),
